--- a/src/Components/Styles/ColumnStyle.css
+++ b/src/Components/Styles/ColumnStyle.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  height: 100%;
+  min-height: 100vh;
 }
 .boardcolumn:not(last-child) {
   border-right: 1px solid #d3d3d3;
 }
 .boardcolumn h1 {
+  text-align: center;
   border-bottom: 1px solid #d3d3d3;
   font-size: 18px;
   color: #d3d3d3;
